wrapping bug fix

--- a/client/src/styles/base.css
+++ b/client/src/styles/base.css
@@ -1381,7 +1381,7 @@ a:visited {
 }
 
 .wrapper {
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   display: flex;
 }
 
